force-app/main/default/objects/PaymentRequest__c/fields/UnreceivedBalforCollection_Local__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalforCollection_Local__c</fullName>
    <formula>AmountLocalForCollection__c -  ActualAmountforCollectionLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreceived Balance for Collection(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>