force-app/main/default/objects/PaymentRequest__c/fields/UnreceivedBalforCollectionFCY__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalforCollectionFCY__c</fullName>
    <formula>AmountUSDForCollection__c -  ActualAmountforCollectionFCY__c</formula>
    <label>Unreceived Balance for Collection(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>