force-app/main/default/objects/PaymentRequest__c/fields/UnreceivedSellAfterOffsetLocal__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedSellAfterOffsetLocal__c</fullName>
    <formula>RollupFMSUnreceivedBalOfSellLocal__c +
RollupWMSUnreceivedBalOfSellLocal__c- 
RollupFMSUnpaidBalOfBuyingLocal__c -
RollupWMSUnpaidBalOfBuyingLocal__c +
RollupOtherUnreceivedBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreceived Selling after Offset(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>