force-app/main/default/objects/PaymentRequest__c/recordTypes/AdvancePayRequestFCY.recordType-meta.xml
<RecordType>
    <fullName>AdvancePayRequestFCY</fullName>
    <active>true</active>
    <label>Advance Payment Request-FCY</label>
</RecordType>