force-app/main/default/objects/PaymentRequest__c/recordTypes/AdvancePayRequestLocal.recordType-meta.xml
<RecordType>
    <fullName>AdvancePayRequestLocal</fullName>
    <active>true</active>
    <label>Advance Payment Request-Local</label>
</RecordType>