force-app/main/default/objects/PaymentRequest__c/recordTypes/CollectionPlanLocalCurrency.recordType-meta.xml
<RecordType>
    <fullName>CollectionPlanLocalCurrency</fullName>
    <active>true</active>
    <label>Collection Plan-Local Currency</label>
</RecordType>