force-app/main/default/objects/PaymentRequest__c/recordTypes/CollectionPlanUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>CollectionPlanUSDCurrency</fullName>
    <active>true</active>
    <label>Collection Plan-USD Currency</label>
</RecordType>