force-app/main/default/objects/PaymentRequest__c/recordTypes/LiquidationRequestLocal.recordType-meta.xml
<RecordType>
    <fullName>LiquidationRequestLocal</fullName>
    <active>true</active>
    <label>Liquidation Request-Local</label>
</RecordType>