force-app/main/default/objects/PaymentRequest__c/recordTypes/PaymentRequestlocalCurrency.recordType-meta.xml
<RecordType>
    <fullName>PaymentRequestlocalCurrency</fullName>
    <active>true</active>
    <label>Payment Request-Local Currency</label>
</RecordType>