force-app/main/default/objects/PaymentRequest__c/recordTypes/PaymentRequestUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>PaymentRequestUSDCurrency</fullName>
    <active>true</active>
    <label>Payment Request-USD Currency</label>
</RecordType>