force-app/main/default/objects/PaymentRequest__c/validationRules/Max_No_of_Days_after_Payment_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_No_of_Days_after_Payment_Request</fullName>
    <active>false</active>
    <errorConditionFormula>and(LiquidationTargetMaxNoDays__c   &lt;  0,  RecordType.DeveloperName =&quot;AdvancePayRequestLocal&quot;)</errorConditionFormula>
    <errorDisplayField>CashAdvanceID__c</errorDisplayField>
    <errorMessage>There is a previous advanced request which is not processed liquidation more than Liquidation target date.</errorMessage>
</ValidationRule>